Made changes to build file. JRE is now bundled when creating .deb